# breast-cancer-classifier

./: .gitignore  README.md  Transformers.ipynb  pyproject.toml
docs/: \  backmatter.fdb_latexmk  backmatter.fls  backmatter.tex  frontmatter.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.toc  main.xdv  mainmatter.tex  preamble.tex  references.bib  variables.tex
docs/assets/: architectural_diagram.excalidraw
docs/backmatter/: appendix.tex
docs/frontmatter/: abstract.tex
docs/mainmatter/: conclusion.fdb_latexmk  conclusion.fls  conclusion.tex  design.tex  evaluation.tex  implementation.tex  introduction.tex  lit_rev.tex  prototype.tex
notebooks/: ResNet_and_Grad-CAM.ipynb
src/cnns/: requirements.txt
src/transformers/: Transformers.ipynb  requirements.txt
