[project]
name = "breast-cancer-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "pynblint>=0.1.6",
]
